Fix page listing alignment with header

--- a/src/notebook/editor/header/Header.css
+++ b/src/notebook/editor/header/Header.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: flex-start;
     align-items: flex-end;
-    margin-bottom: 20px;
+    padding-bottom: 20px;
     height: var(--header-height);
     background-color: var(--gray-light);
 }
